<?xml version="1.0" encoding="utf-8"?>
<!-- 

    This file is part of Brewzor.

    Copyright (C) 2010 James Whiddon

    Brewzor is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Brewzor is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Brewzor.  If not, see <http://www.gnu.org/licenses/>.

-->
<LinearLayout	xmlns:android="http://schemas.android.com/apk/res/android"
           		style="@style/portrait_layout"
				>
	
	<TableLayout style="@style/entry_table"
			     >
		    
		    <TableRow>
		    
			    <TextView style="@style/label_text"
			              android:text="@string/batch_sparge_grain_weight" 
			              />	
				
				<EditText android:id="@+id/grainWeightEntry" 
			              style="@style/decimal_entry" 
			              /> 
			    
			    <TextView android:id="@+id/grainWeightUnitType"
			    		  style="@style/label_text" 
			    		  />	
				
		    </TableRow>

		    <TableRow>
		    
			    <TextView style="@style/label_text"
			              android:text="@string/batch_sparge_strike_volume"
			              />
				
				<EditText android:id="@+id/strikeVolumeEntry" 
			              style="@style/decimal_entry" 
			              /> 
			    
			    <TextView android:id="@+id/strikeVolumeUnitType"
			    		  style="@style/label_text" 
			    		  />	
				
		    </TableRow>

		    <TableRow>
		    
			    <TextView style="@style/label_text"
			              android:text="@string/batch_sparge_boil_volume"
			              />
				
				<EditText android:id="@+id/boilVolumeEntry" 
			              style="@style/decimal_entry" 
			              /> 
			    
			    <TextView android:id="@+id/boilVolumeUnitType"
			    		  style="@style/label_text" 
			    		  />	
				
		    </TableRow>

		</TableLayout>

		<TableLayout	style="@style/entry_table"
						android:gravity="center"
					    android:shrinkColumns="0"
						android:layout_height="fill_parent"
				     	>
		    
		    <TableRow>
		    
			    <TextView style="@style/label_text"
			              android:text="@string/batch_sparge_water_to_grain_ratio" 
			              />	
		
			    <TextView style="@style/small_result"
					      android:gravity="center_horizontal|right"
			              android:id="@+id/calculatedWaterToGrainRatio" 
			              />	
			
			    <TextView style="@style/label_text"
			              android:id="@+id/calculatedWaterToGrainRatioUnitType" 
			              />	

			</TableRow>

		    <TableRow>
		    
			    <TextView style="@style/label_text"
			              android:text="@string/batch_sparge_grain_absorption_volume" 
			              />	
		
			    <TextView style="@style/small_result"
					      android:gravity="center_horizontal|right"
			              android:id="@+id/calculatedGrainAbsorptionVolume" 
			              />	
			
			    <TextView style="@style/label_text"
			              android:id="@+id/calculatedGrainAbsorptionVolumeUnitType" 
			              />	

			</TableRow>

		    <TableRow>
		    
			    <TextView style="@style/label_text"
			              android:text="@string/batch_sparge_first_sparge_volume" 
			              />	
		
			    <TextView style="@style/small_result"
					      android:gravity="center_horizontal|right"
			              android:id="@+id/calculatedFirstSpargeVolume" 
			              />	
			
			    <TextView style="@style/label_text"
			              android:id="@+id/calculatedFirstSpargeVolumeUnitType" 
			              />	

			</TableRow>

		    <TableRow>
		    
			    <TextView style="@style/label_text"
			              android:text="@string/batch_sparge_second_sparge_volume" 
			              />	
		
			    <TextView style="@style/small_result"
					      android:gravity="center_horizontal|right"
			              android:id="@+id/calculatedSecondSpargeVolume" 
			              />	
			
			    <TextView style="@style/label_text"
			              android:id="@+id/calculatedSecondSpargeVolumeUnitType" 
			              />	

			</TableRow>

		    <TableRow>
		    
			    <TextView style="@style/label_text"
			              android:text="@string/batch_sparge_total_mash_volume" 
			              />	
		
			    <TextView style="@style/small_result"
					      android:gravity="center_horizontal|right"
			              android:id="@+id/calculatedTotalMashVolume" 
			              />	
			
			    <TextView style="@style/label_text"
			              android:id="@+id/calculatedTotalMashVolumeUnitType" 
			              />	

			</TableRow>

	</TableLayout>
	
</LinearLayout>
	