<?xml version="1.0" encoding="utf-8"?>
<!-- 

    This file is part of Brewzor.

    Copyright (C) 2010 James Whiddon

    Brewzor is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Brewzor is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Brewzor.  If not, see <http://www.gnu.org/licenses/>.

-->
<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
				style="@style/portrait_layout"
				>

	<TableLayout 	style="@style/entry_table"
					>

			<TableRow>

				<TextView 	style="@style/label_text"
							android:text="@string/measured_height" 
							/>

				<EditText 	android:id="@+id/heightEntry" 
							style="@style/decimal_entry" 
							/>

				<TextView 	android:id="@+id/heightUnitType" 
							style="@style/label_text" 
							/>

			</TableRow>

			<TableRow>

				<TextView style="@style/label_text"
							android:text="@string/kettle_diameter" 
							/>

				<EditText 	android:id="@+id/diameterEntry" 
							style="@style/decimal_entry" 
							/>

				<TextView 	android:id="@+id/diameterUnitType" 
							style="@style/label_text" 
							/>
			
			</TableRow>

			<TableRow>

				<TextView style="@style/label_text"
							android:text="@string/false_bottom_height" 
							/>

				<EditText android:id="@+id/falseBottomHeightEntry"
							style="@style/decimal_entry" 
							/>

				<TextView android:id="@+id/falseBottomHeightUnitType"
							style="@style/label_text" 
							/>
			
			</TableRow>

			<TableRow>
			
				 <Button    android:id="@+id/correctForExpansion"
					        android:layout_width="fill_parent"
					        android:layout_height="wrap_content"
							android:gravity="center" 
							android:layout_span="3"
							/>
        
			</TableRow>

		</TableLayout>

	<LinearLayout 	android:orientation="vertical" 
					android:id="@+id/tester"
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
					android:gravity="center"
					>

		<TextView 	android:id="@+id/calculatedVolume"
					android:text="@string/calculated_cylinder_volume_default" 
					style="@style/large_result" 
					/>

		<TextView 	android:id="@+id/calculatedVolumeUnitType"
					style="@style/small_result" 
					/>

	</LinearLayout>

</LinearLayout>