<?xml version="1.0" encoding="utf-8"?>
<!-- 

    This file is part of Brewzor.

    Copyright (C) 2010 James Whiddon

    Brewzor is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Brewzor is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Brewzor.  If not, see <http://www.gnu.org/licenses/>.

-->
<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
				style="@style/portrait_layout"
				>

	<TableLayout 	style="@style/entry_table"
					>

		<TableRow>

			<TextView 	style="@style/label_text"
						android:text="@string/current_gravity" 
						/>

			<EditText 	android:id="@+id/currentGravityEntry" 
						style="@style/decimal_entry" 
						/>

			<TextView 	android:id="@+id/currentGravityUnitType" 
						style="@style/label_text" 
						/>

		</TableRow>

		<TableRow>

			<TextView 	style="@style/label_text"
						android:text="@string/desired_gravity" 
						/>

			<EditText 	android:id="@+id/desiredGravityEntry" 
						style="@style/decimal_entry" 
						/>

			<TextView 	android:id="@+id/desiredGravityUnitType" 
						style="@style/label_text" 
						/>

		</TableRow>

		<TableRow>

			<TextView 	style="@style/label_text"
						android:text="@string/wort_volume" 
						/>

			<EditText 	android:id="@+id/currentVolumeEntry" 
						style="@style/decimal_entry" 
						/>

			<TextView 	android:id="@+id/currentVolumeUnitType" 
						style="@style/label_text" 
						/>

		</TableRow>

	</TableLayout>

	<TextView	android:id="@+id/gravityCorrectionDescription"
				android:layout_height="fill_parent"
				android:layout_width="fill_parent"
				android:gravity="center"
				style="@style/small_result" 
				/>

</LinearLayout>
